# ripopt

./: .gitignore  .zenodo.json  BENCHMARK_REPORT.json  BENCHMARK_REPORT.md  BENCHMARK_REPORT_v0.6.1.json  CHANGELOG.md  CLAUDE.md  Cargo.toml  DUAL_INF_TOL_CUTEST_SUBSET.md  DUAL_INF_TOL_TEST.md  Makefile  PYPI_PUBLISHING.md  README.md  RELEASE_CHECKLIST.md  RIPOPT_VS_IPOPT.md  benchmark_report.py  build.rs  cho_results.json  electrolyte_results.json  large_scale_results.txt  narrative-history.org  opf_benchmark_report.md  opf_results.json  reflections.org  ripopt.h
.config/: nextest.toml
.github/workflows/: pages.yml  publish-pyomo.yml  (+3 more)
Ripopt.jl/: Project.toml  README.md
benchmarks/: BENCHMARK_REPORT.json  BENCHMARK_REPORT.md  BENCHMARK_REPORT_v0.6.2.json  BENCHMARK_REPORT_v0.7.1.json  README.md  benchmark_report.py
cutest_suite/: CUTEST_REPORT.md  collect_kkt.rs  compare.py  cutest_problem.rs  prepare.sh  results.json  run_cutest.rs
docs/: REFERENCE_GAP_ROADMAP.md  book.toml  diagnostics-guide.md  program.md
examples/: benchmark.rs  benchmark_solvers.rs  c_api_test.c  c_example_with_options.c  c_hs035.c  c_rosenbrock.c  cat_a_probe.rs  cho_benchmark.rs  compare_large_scale.rs  debug_hs071.rs  debug_hs071_v2.rs  debug_tp012.rs  debug_tp020.rs  debug_tp023.rs  debug_tp027.rs  debug_tp045.rs  debug_tp081.rs  debug_tp116.rs  debug_tp262.rs  debug_tp374.rs  debug_tp376.rs  diff_harness.rs  electrolyte_benchmark.rs  grid_benchmark.rs  hs071.rs  issue_6_repro.rs  issue_7_debug.py  issue_7_repro.rs  lbfgs_hessian.rs  opf_benchmark.rs  probe_external.rs  pyomo_examples.ipynb  regression_test.rs  rosenbrock.rs  sensitivity.rs  sipopt_analytical.rs
gams/: Makefile  README.md  gams_ripopt.c  install.sh  test_hs071.gms
gas/: README.md  gaslib11_dynamic.nl
hs_suite/: HS_VALIDATION_REPORT.md  PERFORMANCE_COMPARISON.md  compare.py  cyipopt_stderr.txt  generate.py  hs_cyipopt_results.json  hs_ipopt_native_results.json  hs_ipopt_native_results_v0.6.1.json  hs_ripopt_results.json  hs_ripopt_results_v0.6.1.json  hs_suite_stderr.txt  run_cyipopt.py  run_ipopt_native.rs  run_ripopt.rs
manuscript/: ripopt.bib  ripopt.org  supporting-information.org
pyomo-ripopt/: README.md  pyproject.toml  setup.py
pyomo-ripopt/pyomo_ripopt/: __init__.py  ripopt_solver.py
ripopt-py/: Cargo.toml  README.md  pyproject.toml
ripopt-py/docs/: api.md  user_guide.md
ripopt-py/examples/: bench_hs071.py  bench_nmpc.py  tutorial.ipynb
ripopt-py/python/ripopt/: __init__.py
ripopt-py/src/: lib.rs
ripopt-py/tests/: test_hs071.py  test_l1_penalty_stall.py  test_problem.py
rmumps/: Cargo.toml  LICENSE  MUMPS_LDLT_ALGORITHM.md  README.md  build.rs
src/: augmented_lagrangian.rs  auxiliary_preprocessing.rs  c_api.rs  convergence.rs  filter.rs  ipm.rs  kkt.rs  lbfgs.rs  lib.rs  linearity.rs  logging.rs  options.rs  preprocessing.rs  problem.rs  restoration.rs  restoration_nlp.rs  result.rs  sensitivity.rs  slack_formulation.rs  sqp.rs  trace.rs  warmstart.rs
tests/: augmented_lagrangian.rs  c_api.rs  correctness.rs  electrolyte_thermo.rs  grid.rs  hs_problems_subset.rs  hs_regression.rs  ipm_paths.rs  iterative_solvers.rs  large_scale.rs  large_scale_benchmark.rs  lbfgs_ipm.rs  nl_integration.rs  opf.rs  sensitivity.rs
tutorials/: 01_nlp_intro.ipynb  02_unconstrained.ipynb  03_kkt_conditions.ipynb  04_penalty_augmented_lagrangian.ipynb  05_sqp.ipynb  06_barrier_methods.ipynb  07_primal_dual_ipm.ipynb  08_kkt_matrix.ipynb  09_ldlt_bunch_kaufman.ipynb  10_inertia_correction.ipynb  11_filter_line_search.ipynb  12_convergence_criteria.ipynb  13_restoration.ipynb  14_mehrotra_gondzio.ipynb  15_ripopt_in_practice.ipynb  README.md
validation/: VALIDATION_REPORT.md  compare_cyipopt.py  cyipopt_results.json  generate_report.py  ripopt_results.json
(+121 files in other folders)
