[package]
name = "ripopt"
version = "0.1.0"
edition = "2021"
license = "EPL-2.0"
description = "A memory-safe interior point optimizer in Rust"

[dependencies]
log = "0.4"
env_logger = "0.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
faer = "0.20"

[features]
ipopt-native = []
cutest = []

[[bin]]
name = "hs_suite"
path = "hs_suite/run_ripopt.rs"

[[bin]]
name = "ipopt_native"
path = "hs_suite/run_ipopt_native.rs"
required-features = ["ipopt-native"]

[[bin]]
name = "cutest_suite"
path = "cutest_suite/run_cutest.rs"
required-features = ["cutest", "ipopt-native"]

[dev-dependencies]
approx = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
