[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "pyomo-ripopt"
version = "0.1.0"
description = "Pyomo solver plugin for the ripopt NLP solver"
requires-python = ">=3.8"
license = {text = "EPL-2.0"}
dependencies = ["pyomo>=6.0"]

[project.entry-points."pyomo.solvers"]
ripopt = "pyomo_ripopt.ripopt_solver"
