[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[project]
name = "ripopt"
version = "0.1.0"
description = "Direct Python bindings for ripopt (interior-point NLP solver) with JAX autodiff"
readme = "README.md"
license = { text = "EPL-2.0" }
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.23",
    "jax>=0.4.20",
    "jaxlib>=0.4.20",
]

[project.optional-dependencies]
test = ["pytest"]

[tool.maturin]
module-name = "ripopt._ripopt"
python-source = "python"
features = ["pyo3/extension-module"]
